--- a/training/Back/mvcexam/src/main/webapp/WEB-INF/web.xml
+++ b/training/Back/mvcexam/src/main/webapp/WEB-INF/web.xml
@@ -3,5 +3,29 @@
  "http://java.sun.com/dtd/web-app_2_3.dtd" >
 
 <web-app>
-  <display-name>Archetype Created Web Application</display-name>
+	<display-name>Archetype Created Web Application</display-name>
+
+
+	<servlet>
+		<!-- 프론트 컨트롤러로 이거를 지정해 줄것이다. -->
+		<servlet-name>mvc</servlet-name>
+		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+		<!-- contextClass Bean 공장을 만드는 것이라고 생각하면 된다. -->
+		<init-param>
+			<param-name>contextClass</param-name>
+			<param-value>org.springframework.web.context.support.AnnotationConfigWebApplicationContext</param-value>
+		</init-param>
+		<!-- 이게 아까 만든 Configuration 파일이다라고 알려준다. 패키지명 포함 -->
+		<init-param>
+			<param-name>contextConfigLocation</param-name>
+			<param-value>kr.or.connect.mvcexam.config.WebMvcContextConfiguration</param-value>
+		</init-param>
+		<load-on-startup>1</load-on-startup>
+	</servlet>
+
+	<!-- url / 가 들어오면 servlet-name와 같은 servlet를 실행시켜라 -->
+	<servlet-mapping>
+		<servlet-name>mvc</servlet-name>
+		<url-pattern>/</url-pattern>
+	</servlet-mapping>
 </web-app>
